--- a/Trolley/TolleyApp/TolleyApp/SearchItemTableViewCell.xib
+++ b/Trolley/TolleyApp/TolleyApp/SearchItemTableViewCell.xib
@@ -59,23 +59,23 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="saQ-9o-orK">
-                                        <rect key="frame" x="10" y="60" width="164" height="30"/>
+                                        <rect key="frame" x="10" y="60" width="100" height="30"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IZq-3M-hC9">
-                                                <rect key="frame" x="0.0" y="0.0" width="54.5" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="33.5" height="30"/>
                                                 <state key="normal" image="minus"/>
                                                 <connections>
                                                     <action selector="didTapReduceButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="RgP-48-7Wr"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="de3-Nr-tjK">
-                                                <rect key="frame" x="54.5" y="0.0" width="55" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="de3-Nr-tjK">
+                                                <rect key="frame" x="33.5" y="0.0" width="33" height="30"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IwB-mm-TeU">
-                                                <rect key="frame" x="109.5" y="0.0" width="54.5" height="30"/>
+                                                <rect key="frame" x="66.5" y="0.0" width="33.5" height="30"/>
                                                 <state key="normal" image="plus"/>
                                                 <connections>
                                                     <action selector="didTapAddButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="KSL-Pw-bga"/>
@@ -95,6 +95,7 @@
                                             <constraint firstAttribute="bottom" secondItem="IZq-3M-hC9" secondAttribute="bottom" id="sfw-we-Nht"/>
                                             <constraint firstItem="IZq-3M-hC9" firstAttribute="leading" secondItem="saQ-9o-orK" secondAttribute="leading" id="uYk-OR-0Nx"/>
                                             <constraint firstItem="IwB-mm-TeU" firstAttribute="width" secondItem="IZq-3M-hC9" secondAttribute="width" id="vUs-vK-lcX"/>
+                                            <constraint firstAttribute="width" constant="100" id="vij-fR-nQy"/>
                                             <constraint firstAttribute="height" constant="30" id="vnJ-82-1TZ"/>
                                             <constraint firstItem="de3-Nr-tjK" firstAttribute="top" secondItem="saQ-9o-orK" secondAttribute="top" id="x9P-En-lnb"/>
                                         </constraints>
@@ -115,7 +116,6 @@
                                     <constraint firstAttribute="trailing" secondItem="6KF-VV-tTn" secondAttribute="trailing" constant="10" id="6Pa-bb-dek"/>
                                     <constraint firstItem="saQ-9o-orK" firstAttribute="top" secondItem="6KF-VV-tTn" secondAttribute="bottom" constant="10" id="QEE-Me-Gal"/>
                                     <constraint firstAttribute="trailing" secondItem="yNF-8q-vbF" secondAttribute="trailing" constant="10" id="T0F-N7-tCw"/>
-                                    <constraint firstAttribute="trailing" secondItem="saQ-9o-orK" secondAttribute="trailing" constant="50" id="X5Z-VH-IQQ"/>
                                     <constraint firstAttribute="trailing" secondItem="dBW-9V-KLx" secondAttribute="trailing" constant="10" id="YpJ-jD-06d"/>
                                     <constraint firstItem="6KF-VV-tTn" firstAttribute="top" secondItem="dBW-9V-KLx" secondAttribute="bottom" constant="5" id="aHw-K5-VJE"/>
                                     <constraint firstItem="dBW-9V-KLx" firstAttribute="leading" secondItem="Pvp-dX-fv1" secondAttribute="leading" constant="10" id="cw4-DZ-BcU"/>
