--- a/Trolley/TolleyApp/TolleyApp/SearchItemTableViewCell.xib
+++ b/Trolley/TolleyApp/TolleyApp/SearchItemTableViewCell.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="334" height="132"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="334" height="131"/>
+                <rect key="frame" x="0.0" y="0.0" width="334" height="132"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TdN-BM-jJK">
@@ -63,7 +63,7 @@
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IZq-3M-hC9">
                                                 <rect key="frame" x="0.0" y="0.0" width="33.5" height="30"/>
-                                                <state key="normal" image="minus"/>
+                                                <state key="normal" image="minu_dark"/>
                                                 <connections>
                                                     <action selector="didTapReduceButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="RgP-48-7Wr"/>
                                                 </connections>
@@ -71,12 +71,12 @@
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="de3-Nr-tjK">
                                                 <rect key="frame" x="33.5" y="0.0" width="33" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IwB-mm-TeU">
                                                 <rect key="frame" x="66.5" y="0.0" width="33.5" height="30"/>
-                                                <state key="normal" image="plus"/>
+                                                <state key="normal" image="plus_dark"/>
                                                 <connections>
                                                     <action selector="didTapAddButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="KSL-Pw-bga"/>
                                                 </connections>
@@ -159,7 +159,7 @@
     </objects>
     <resources>
         <image name="fruit" width="265" height="250"/>
-        <image name="minus" width="24" height="24"/>
-        <image name="plus" width="24" height="24"/>
+        <image name="minu_dark" width="16" height="16"/>
+        <image name="plus_dark" width="16" height="16"/>
     </resources>
 </document>
