--- a/Trolley/TolleyApp/TolleyApp/AllItemsCollectionViewCell.xib
+++ b/Trolley/TolleyApp/TolleyApp/AllItemsCollectionViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -149,12 +149,14 @@
                 <outlet property="allPriceLabel" destination="K4A-Ym-jXI" id="FUQ-FJ-8xP"/>
                 <outlet property="allQuantityLabel" destination="adU-lS-JNS" id="3Ju-oA-BMJ"/>
                 <outlet property="hideView" destination="LXD-7C-Jnu" id="wgX-WX-NSO"/>
+                <outlet property="hideViewAddItemButton" destination="zpB-f0-ejc" id="vHZ-Kh-OfF"/>
+                <outlet property="subtractItemButton" destination="Ct2-tt-aDh" id="A6H-Xv-w7p"/>
             </connections>
         </collectionViewCell>
     </objects>
     <resources>
         <image name="fruit" width="265" height="250"/>
-        <image name="minus" width="24" height="24"/>
-        <image name="plus" width="24" height="24"/>
+        <image name="minus" width="16" height="16"/>
+        <image name="plus" width="16" height="16"/>
     </resources>
 </document>
